Updated app.css file

--- a/buildspace-nft-course-starter-main/src/styles/App.css
+++ b/buildspace-nft-course-starter-main/src/styles/App.css
@@ -29,7 +29,7 @@
 }
 
 .gradient-text {
-  background: -webkit-linear-gradient(left, #60c657 30%, #35aee2 60%);
+  background: -webkit-linear-gradient(left, #e303fc 30%, #03fcf4 60%);
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -49,20 +49,20 @@
 }
 
 .connect-wallet-button {
-  background: -webkit-linear-gradient(left, #60c657, #35aee2);
+  background: -webkit-linear-gradient(left, #fc03b1, #39fc03);
   background-size: 200% 200%;
   animation: gradient-animation 4s ease infinite;
 }
 
 .mint-button {
-  background: -webkit-linear-gradient(left, #a200d6, #ff6fdf);
+  background: -webkit-linear-gradient(left, #fc6603, #b6fc03);
   background-size: 200% 200%;
   animation: gradient-animation 4s ease infinite;
   margin-right: 15px;
 }
 
 .opensea-button {
-  background-color: rgb(32, 129, 226);
+  background-color: rgb(67, 120, 58);
 }
 
 .mint-count {
